# pub-sub-client

./: .envrc  .envrc.local  .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  release.toml  rust-toolchain.toml  rustfmt.toml
.blackbox/: blackbox-admins.txt  blackbox-files.txt  pubring.kbx  trustdb.gpg
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: audit.yaml  audit.yml  ci.yaml  ci.yml  dependabot-auto-merge.yaml  dependabot-automerge.yml  release-plz.yaml  release-plz.yml  test.yml
examples/: simple.rs  transform.rs  transform_versioned.rs
pub-sub-client/: Cargo.toml
pub-sub-client-derive/: Cargo.toml
pub-sub-client-derive/src/: lib.rs
pub-sub-client-derive/src/publisher/: mod.rs
pub-sub-client-tests/: Cargo.toml
pub-sub-client-tests/examples/: simple.rs  transform.rs
pub-sub-client-tests/src/: main.rs
pub-sub-client-tests/tests/: test.rs
pub-sub-client/examples/: simple.rs  transform.rs
pub-sub-client/src/: lib.rs
pub-sub-client/src/error/: mod.rs
pub-sub-client/src/publisher/: mod.rs
pub-sub-client/src/subscriber/: mod.rs
pub-sub-client/tests/: test.rs  valid_key.json
secrets/: active-road-365118-0214022979ee.json.gpg  active-road-365118-2eca6b7b8fd9.json.gpg  cryptic-hawk-336616-e228f9680cbc.json.gpg
src/: error.rs  lib.rs  manager.rs  publisher.rs  subscriber.rs
src/error/: mod.rs
src/publisher/: mod.rs
src/subscriber/: mod.rs
src/transform/: mod.rs
tests/: integration_test.rs  invalid_key.json  test.rs
