[package]
name          = "pub-sub-client"
version       = "0.12.1-alpha"
edition       = "2021"
description   = "Google Cloud Pub/Sub client library"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/pub-sub-client"
repository    = "https://github.com/hseeberger/pub-sub-client"
documentation = "https://github.com/hseeberger/pub-sub-client"
exclude       = [ ".blackbox", ".github", "secrets" ]

[dependencies]
base64     = { version = "0.21" }
goauth     = { version = "0.13" }
reqwest    = { version = "0.11", features = [ "json" ] }
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
smpl_jwt   = { version = "0.7" }
thiserror  = { version = "1.0" }
time       = { version = "0.3", features = [ "serde-well-known" ] }
tracing    = { version = "0.1" }

[dev-dependencies]
anyhow                 = { version = "1.0" }
testcontainers         = { version = "0.15" }
testcontainers-modules = { version = "0.1", features = [ "google_cloud_sdk_emulators" ] }
tokio                  = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber     = { version = "0.3", features = [ "env-filter", "fmt", "json" ] }
