[package]
name          = "pub-sub-client"
version       = "0.13.2"
edition       = "2024"
description   = "Google Cloud Pub/Sub client library"
authors       = [ "Heiko Seeberger <git@heikoseeberger.de>" ]
license       = "Apache-2.0"
readme        = "README.md"
homepage      = "https://github.com/hseeberger/pub-sub-client"
repository    = "https://github.com/hseeberger/pub-sub-client"
documentation = "https://github.com/hseeberger/pub-sub-client"
include       = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]

[dependencies]
base64     = { version = "0.22" }
goauth     = { version = "0.17" }
reqwest    = { version = "0.13", features = [ "json" ] }
serde      = { version = "1.0", features = [ "derive" ] }
serde_json = { version = "1.0" }
smpl_jwt   = { version = "0.9" }
thiserror  = { version = "2.0" }
time       = { version = "0.3", features = [ "serde-well-known" ] }
tracing    = { version = "0.1" }

[dev-dependencies]
anyhow                 = { version = "1.0" }
assert_matches         = { version = "1.5" }
testcontainers         = { version = "0.27" }
testcontainers-modules = { version = "0.15", features = [ "google_cloud_sdk_emulators" ] }
tokio                  = { version = "1", features = [ "macros", "rt-multi-thread" ] }
tracing-subscriber     = { version = "0.3", features = [ "env-filter", "fmt", "json" ] }
