[package]
name                    = "pub-sub-client-derive"
version= "0.11.1-alpha.0"
edition.workspace       = true
description.workspace   = true
authors.workspace       = true
license.workspace       = true
readme.workspace        = true
homepage.workspace      = true
repository.workspace    = true
documentation.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote       = "1.0"
syn         = "1.0"
