[package]
name          = "pub-sub-client-derive"
version       = "0.11.1-alpha.0"
description   = { workspace = true }
edition       = { workspace = true }
authors       = { workspace = true }
license       = { workspace = true }
readme        = { workspace = true }
homepage      = { workspace = true }
repository    = { workspace = true }
documentation = { workspace = true }
publish       = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true }
