[package]
name = "pub-sub-client-tests"
version = "0.10.1-alpha.0"
edition = "2021"
rust-version = "1.58"

publish = false

[dev-dependencies]
pub-sub-client = { version = "=0.10.1-alpha.0", path = "../pub-sub-client", features = [ "derive" ] }
anyhow = "1.0"
base64 = "0.13"
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
# TODO use published package once Pub/Sub has been included
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", branch = "dev" }
tokio = { version = "1.15", features = [ "full" ] }
tracing-subscriber = { version = "0.3", features = [ "env-filter", "fmt", "json", "tracing-log" ] }
