[package]
name                    = "pub-sub-client-tests"
version.workspace       = true
edition.workspace       = true
description.workspace   = true
authors.workspace       = true
license.workspace       = true
readme.workspace        = true
homepage.workspace      = true
repository.workspace    = true
documentation.workspace = true
publish                 = false
exclude                 = [ "*" ]

[dev-dependencies]
pub-sub-client     = { version = "=0.10.1-alpha.0", path = "../pub-sub-client", features = [ "derive" ] }
anyhow             = { workspace = true }
base64             = { workspace = true }
reqwest            = { workspace = true, features = [ "json" ] }
serde              = { workspace = true, features = [ "derive" ] }
serde_json         = { workspace = true }
testcontainers     = { workspace = true }
tokio              = { workspace = true, features = [ "full" ] }
tracing-subscriber = { workspace = true, features = [ "env-filter", "fmt", "json", "tracing-log" ] }
