[package]
name                    = "pub-sub-client"
version= "0.11.0"
edition.workspace       = true
description.workspace   = true
authors.workspace       = true
license.workspace       = true
readme.workspace        = true
homepage.workspace      = true
repository.workspace    = true
documentation.workspace = true
exclude                 = [ "tests" ]

[features]
derive = [ "pub-sub-client-derive" ]

[dependencies]
pub-sub-client-derive = { version = "=0.11.1-alpha.0", optional = true, path = "../pub-sub-client-derive" }
base64                = { workspace = true }
goauth                = { workspace = true }
reqwest               = { workspace = true, features = [ "json" ] }
serde                 = { workspace = true, features = [ "derive" ] }
serde_json            = { workspace = true }
smpl_jwt              = { workspace = true }
thiserror             = { workspace = true }
time                  = { workspace = true, features = [ "serde-well-known" ] }
tracing               = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
